# OSINT-EVIDENCE

./: .env.example  .gitignore  README.md  api_server.py  api_server_2.err  api_server_smoke.err  debug_llm.py  pyproject.toml  requirements.txt  run.py  test_investigate.py
examples/: demo_contradiction_query.py  demo_corporate_query.py
frontend/: index.html  package-lock.json  package.json  vercel.json
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: ApiKeyModal.jsx  ContradictionPanel.jsx  DatasetExplorer.jsx  EvidenceCard.jsx  Header.jsx  InvestigationBoard.jsx  MagneticCursor.jsx  ReportView.jsx  SearchBar.jsx  SourceBadge.jsx  TerminalOutput.jsx  ToolPanel.jsx
frontend/src/lib/: gsap.js
src/: config.py  llm_client.py
src/agent/: __init__.py  claim_extractor.py  executor.py  planner.py  react_loop.py
src/evidence_ledger/: __init__.py  schema.py  store.py
src/reporting/: __init__.py  evidence_explainer.py  report_generator.py
src/tools/: __init__.py  base.py  firecrawl_scraper.py  gdelt.py  icij_data.py  ofac_sdn.py  opencorporates.py  opensanctions.py  wayback.py  web_scraper.py  web_search.py  wikidata.py
src/ui/: app.py  utils.py
src/verification/: __init__.py  adversarial_agent.py  confidence_scorer.py  contradiction_detector.py  cross_referencer.py  network_graph_agent.py  orchestrator.py  source_tagger.py  temporal_agent.py
tests/: test_evidence_ledger.py  test_planner.py  test_reporting.py  test_tools.py  test_verification.py
