[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "osint-investigative-agent"
version = "1.0.0"
description = "Explainable OSINT Investigative Agent with evidence ledger, autonomous planning, and contradiction detection"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "pandas>=2.0",
    "networkx>=3.0",
    "plotly>=5.0",
    "pyvis>=0.3",
    "streamlit>=1.28",
    "fastapi>=0.110",
    "uvicorn>=0.27",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[project.scripts]
osint-agent = "src.ui.app:main"

[tool.vercel]
entrypoint = "api_server:app"
